styles/global.css
:root{
    --primary:#FFFFFF;
    --bg-footer:#111111;
    --bg-gray:#F5F5F5;
    --text-black:#000000;
    --text-input:#585858;
    --inative-bg-button-gray:#e7e7e7;
    --inative-text-button-gray:#bcbcbc;
    --hover-active-bg-button:#8f23d6;
    --purple:#820AD1;
    --ultra-violet:#2F0549;
    --hover-purple:#ab4bea;
    --hover-purple-light:#f4e7ff;
    --alert-color:#d72923;
}

/* TO DO: fixes fill color of svg */
/* TO DO: make animation for header card cpf input with javascript */

header{
    position: sticky;
    background-color: var(--bg-primary);
    height: 3.75rem;
}
 header nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-left: 4rem;
    height: 100%;
}

header nav ul{
    display: flex;
    height: inherit;
    color: var(--text-black);
}

header nav ul li{
    margin-right: 2rem;
    font-size: 1.05rem;
    font-weight: 600;
    display: flex;
    align-items: center;
    gap: 0.5rem;
    height: 100%;
    width: max-content;

    list-style: none;
}

header nav ul li a{
    cursor: pointer;
    color: var(--text-black);
    text-decoration: none;
}

/* menu selects arrow animation for dropdown  */
header nav ul li:hover img.arrow-menu{
    transform: rotate(180deg);
    transition: 0.2s;
}

header nav button{
    background-color: var(--primary);
    color: var(--purple);
    border: solid transparent 0.15rem;
    font-size: 1.25rem;
    font-weight: 600;
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin: 0 4rem 0 0;
    cursor: pointer;
}

header nav button:hover{
    border-bottom: solid var(--purple) 0.15rem;
}

section.header{
    background-image: url(/assets/images/header-background.png);
    background-size: cover;
    background-position: center;
    height:650px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 35rem;
    padding: 3rem;
}

section.header .text-header{
    color: var(--primary);
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: fit-content;
    margin-left: 1rem;
}
section.header .text-header h1{
    font-size: 3.25rem;
    font-weight: 600;
    margin-bottom: 2rem;

}

section.header .text-header h2{
    font-size: 1.5rem;
    font-weight: 600;
}

/* Card of Header*/
section.header .card-header{
    background-color: var(--primary);
    height: fit-content;
    display: flex;
    flex-direction: column;
    padding: 1.75rem;
    border-radius: 1rem;

}
/* title Card */
section.header .card-header h1{
    font-size: 1.5rem;
    font-weight: 600;
    margin-bottom: 3rem;
}

section.header .card-header p{
    color: var(--text-input);
    font-weight: 600;
    font-size: 1rem;
}


section.header .card-header input{
    border: transparent ;
    border-bottom: solid var(--inative-text-button-gray) 1px ;
    outline: none;
    background: transparent;
    font-size: 1.25rem;
    font-weight: 600;
    padding: -0.5rem 0;
    /* margin-top: -1rem; */
    /* margin-bottom: 3rem; */
}

/* alert caso cpf for invalido */
section.header .card-header span#cpf-invalid{
    color: transparent;
    /* color: var(--alert-color); view fo text */
    font-weight: 600;
    font-size: 1rem;
    padding: 0.75rem 0 1rem 0;
}

/* /* Remove arrows from input number in WebKit-based browsers (Chrome, Safari, Edge) */
section.header .card-header input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/* Remove the input number arrows in Firefox */
/* input[type="number"] {
    -moz-appearance: textfield;
} */

/* Button */
section.header .card-header button{
    font-weight: 500;
    color: var(--inative-text-button-gray);
    border: none;
    border-radius: 2rem;
    background-color: var(--inative-bg-button-gray);
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 1.15rem;
    padding: 0.75rem 1.25rem;
    margin-bottom: 1rem;
}

/* arrow card header button */
section.header .card-header button img{
    width: 1.25rem;
    color: #820AD1;
}

/* Carousel */
section.carousel{
    display: flex;
    flex-direction: column;
    align-items: center;
}

section.carousel div.container-cards{
    /* display: flex; */
    display: grid;
    grid-template-columns: repeat(4, minmax(0, 1fr));
    grid-template-rows: repeat(3, minmax(0, 1fr));
    width: 100%;
}

/* carousel cards styles */
section.carousel div.container-cards .carousel-cards{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    color: var(--text-black);
    border: solid var(--bg-gray) 2px;
    border-radius: 1rem;
    margin: 2rem;
    padding: 1.5rem;
    width: 330px;
    /* 
    height: 300px; /* 18.75rem *
    width: 330px; /* 20.625rem *
    */
}

/* Card Carousel icon */
section.carousel div.container-cards .carousel-cards h1 svg{
    width: 1.5rem;
    height: 1.5rem;
    margin-bottom: 10px;
}

/* Card carousel title */
section.carousel div.container-cards .carousel-cards h1{
    display: flex;
    flex-direction: column;
    font-size: 1.5rem;
    font-weight: 600;
    margin-bottom: 2.5rem ;
}

section.carousel div.container-cards .carousel-cards p{
    font-size: 1.25rem;
    font-weight: 400;
    /* letter-spacing: -0.01em;
    line-height: 1.5rem; */
    margin-bottom: 2rem;
}


section.carousel div.container-cards .carousel-cards a{
    text-decoration: none;
    color: inherit;
    display: flex;
    align-items: center;
    width: fit-content;
}

section.carousel div.container-cards .carousel-cards a button {
    background: none;
    border: transparent 0.15rem solid;
    color: var(--purple);
    font-weight: 600;
    font-size: 1.15rem;
    height: min-content;
    display: flex;
    align-items: center;
}

section.carousel div.container-cards .carousel-cards a button:hover{
    border-bottom: solid var(--purple) 0.15rem;
    cursor: pointer;
}

section.carousel div.container-cards .carousel-cards a button svg{
    height: 1.25rem;
    width: 1.25rem;
    margin-left: 0.5rem;
}

section.carousel .carousel-buttons{
    width: fit-content;
    padding: 0;
    margin: 0;
}

section.carousel .carousel-buttons button{
    background: var(--primary);
    border: none;
    border-radius: 5rem;
    height: 3rem;
    width: 3rem;
    justify-content: center;
    margin: 0rem 0.5rem;
    cursor: pointer;
}

section.carousel .carousel-buttons button:hover{
    background: var(--hover-purple-light);
}


section.carousel .carousel-buttons button img{
    width: 1rem;
    height: 1rem;
}

